@@ -11,15 +11,15 @@ public class DepartmentsTest {
 
     @Test
     void whenMissed() {
-        List<String> in = Arrays.asList("k1/sk1", "k2/sk1");
-        List<String> expected = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> in = List.of("k1/sk1", "k2/sk1");
+        List<String> expected = List.of("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> out = Departments.fillGaps(in);
         assertThat(out).containsAll(expected);
     }
 
     @Test
     void whenMissed2() {
-        List<String> in = Arrays.asList(
+        List<String> in = List.of(
                 "K1/SK1",
                 "K1/SK2",
                 "K1/SK1/SSK1",
@@ -27,7 +27,7 @@ public class DepartmentsTest {
                 "K2",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -43,15 +43,15 @@ public class DepartmentsTest {
 
     @Test
     void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsAll(expect);
     }
 
     @Test
     void whenSortAscWithoutMissedDepartments() {
-        List<String> in = Arrays.asList(
+        List<String> in = List.of(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -62,7 +62,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -73,13 +73,13 @@ public class DepartmentsTest {
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
         );
-        Departments.sortAsc(in);
-        assertThat(in).containsAll(expected);
+        List<String> out = Departments.sortAsc(in);
+        assertThat(out).containsSequence(expected);
     }
 
     @Test
     void whenSortAscWithMissedDepartments() {
-        List<String> in = Arrays.asList(
+        List<String> in = List.of(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K2/SK1",
@@ -87,7 +87,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
@@ -95,13 +95,13 @@ public class DepartmentsTest {
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
         );
-        Departments.sortAsc(in);
-        assertThat(in).containsAll(expect);
+        List<String> out = Departments.sortAsc(in);
+        assertThat(out).containsSequence(expect);
     }
 
     @Test
     void whenSortDescWithoutMissedDepartments() {
-        List<String> in = Arrays.asList(
+        List<String> in = List.of(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -112,7 +112,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
@@ -123,13 +123,13 @@ public class DepartmentsTest {
                 "K1/SK1/SSK2",
                 "K1/SK2"
         );
-        Departments.sortDesc(in);
-        assertThat(in).containsAll(expect);
+        List<String> out = Departments.sortDesc(in);
+        assertThat(out).containsSequence(expect);
     }
 
     @Test
     void whenSortDescWithMissedDepartments() {
-        List<String> in = Arrays.asList(
+        List<String> in = List.of(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -138,7 +138,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2",
@@ -147,7 +147,7 @@ public class DepartmentsTest {
                 "K1/SK1/SSK2",
                 "K1/SK2"
         );
-        Departments.sortDesc(in);
-        assertThat(in).containsAll(expect);
+        List<String> out = Departments.sortDesc(in);
+        assertThat(out).containsSequence(expect);
     }
 }
